[gd_scene load_steps=5 format=3 uid="uid://da2nnv1jn8ux2"]

[ext_resource type="Script" path="res://Scripts/enemyBulletOne.gd" id="1_6dj8n"]
[ext_resource type="Texture2D" uid="uid://bnrr4kgcaef13" path="res://Assets/png/pixelCircle.png" id="2_e1qlj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2mbcq"]
radius = 6.08276

[sub_resource type="CircleShape2D" id="CircleShape2D_cqpkh"]
radius = 59.0085

[node name="EnemyBullet" type="Area2D"]
script = ExtResource("1_6dj8n")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.980392, 0, 0, 1)
texture_filter = 1
scale = Vector2(0.01, 0.01)
texture = ExtResource("2_e1qlj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2mbcq")

[node name="Detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource("CircleShape2D_cqpkh")

[node name="Despawner" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="Detection" to="." method="_on_detection_body_entered"]
[connection signal="timeout" from="Despawner" to="." method="_on_despawner_timeout"]
